add brand filter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     }
 </style>
 
+<label for="brand-filter">Filter by Brand:</label>
+<select id="brand-filter">
+    <option value="all">All Brands</option>
+    <!-- Options will be populated dynamically -->
+</select>
+
 <table id="data-table">
     <thead>
         <tr>
