--- a/index.html
+++ b/index.html
@@ -40,4 +40,4 @@
     </tbody>
 </table>
 
-<script src="https://raw.githubusercontent.com/akjmcdowell/CertificateCalculator/refs/heads/main/main.js"></script>
+<script src="https://akjmcdowell.github.io/CertificateCalculator/main.js"></script>
