--- a/index.html
+++ b/index.html
@@ -96,12 +96,16 @@
         });
     }
 
-        // Populate the dropdown with unique models
-    function populateModelFilter(data) {
+    // Populate the dropdown with models based on selected brand
+    function populateModelFilter(data, selectedBrand = 'all-brands') {
         const modelFilter = document.getElementById('model-filter');
-        const models = [...new Set(data.map(item => item.Model))]; // Get unique models
+        modelFilter.innerHTML = '<option value="all-models">All Models</option>'; // Reset model options
 
-        models.forEach(model => {
+        const filteredModels = selectedBrand === 'all-brands'
+            ? [...new Set(data.map(item => item.Model))]
+            : [...new Set(data.filter(item => item.Brand === selectedBrand).map(item => item.Model))];
+
+        filteredModels.forEach(model => {
             const option = document.createElement('option');
             option.value = model;
             option.textContent = model;
@@ -112,14 +116,23 @@
     // Filter data based on selected brand
     document.getElementById('brand-filter').addEventListener('change', function() {
         const selectedBrand = this.value;
+        populateModelFilter(jsonData, selectedBrand); // Update model filter based on selected brand
         const filteredData = selectedBrand === 'all-brands' ? jsonData : jsonData.filter(item => item.Brand === selectedBrand);
         populateTable(filteredData); // Update table with filtered data
     });
 
     // Filter data based on selected model
     document.getElementById('model-filter').addEventListener('change', function() {
+        const selectedBrand = document.getElementById('brand-filter').value;
         const selectedModel = this.value;
-        const filteredData = selectedModel === 'all-models' ? jsonData : jsonData.filter(item => item.model === selectedmodel);
+        
+        const filteredData = (selectedBrand === 'all-brands' && selectedModel === 'all-models')
+            ? jsonData
+            : jsonData.filter(item => 
+                (selectedBrand === 'all-brands' || item.Brand === selectedBrand) && 
+                (selectedModel === 'all-models' || item.Model === selectedModel)
+            );
+
         populateTable(filteredData); // Update table with filtered data
     });
 </script>
