--- a/VEU/VEU_1D-3C.html
+++ b/VEU/VEU_1D-3C.html
@@ -82,7 +82,7 @@
 <br>
 
 <p>Filter by one or more brands or models:</p>
-
+<p><i>Hint: hold down Ctrl key to select multiple brands and/or models.</i></p>
  <div class="filter-container"> 
     <label for="brand-filter">Filter by Brand(s):</label>
     <select id="brand-filter" multiple size="10">
